# hmpps-person-match

./: .dockerignore  .gitignore  .trivyignore  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  asgi.py  docker-compose.yml  docker-entrypoint.sh  docker-images.json  init-db.sh  mypy.ini  pyproject.toml  renovate.json  wsgi.py
.github/: security_snyk_scan.yml
.github/workflows/: database-schema-report.yml  pipeline.yml  sca.yml  security_snyk_scan.yml  security_trivy.yml  security_veracode_pipeline_scan.yml  security_veracode_policy_scan.yml
db/: __init__.py  config.py
db/migrations/: env.py
db/migrations/versions/: dc9d3983d9fa_create_new_person_match_schema.py
dev/: README.md  call_score.py  call_vl_vis.py  generate_data.py  insert_data.py
doc/adr/: 0003-make-person-match-score-full-service.md  0004-switch-from-flask-to-fastapi.md
drift_detector/: Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
helm_deploy/: values-dev.yaml  values-preprod.yaml  values-prod.yaml
helm_deploy/hmpps-person-match/: Chart.yaml  values.yaml
helm_deploy/hmpps-person-match-score/: values.yaml
helm_deploy/hmpps-person-match/templates/: generate-term-frequencies-cron.yaml  migrations.yaml
hmpps_cpr_splink/: .gitignore  README.md  cleaning_sql.sql  model_2025_01_13_5e08.json  model_2025_01_28_1e09.json  pyproject.toml  run_score.py  run_training.py  use.md
hmpps_cpr_splink/cpr_splink/data_cleaning/: join_raw_tables.py  table.py  transformation.py
hmpps_cpr_splink/cpr_splink/data_cleaning/transformations/: __init__.py  chainable_transformation.py  non_chainable_transformation.py  transformation.py  transformed_column.py
hmpps_cpr_splink/cpr_splink/data_cleaning/transformations/cases/: array_length_equal_or_null.py
hmpps_cpr_splink/cpr_splink/data_cleaning/transformations/filter/: filter_date_values.py  filter_string_length.py  filter_string_values.py
hmpps_cpr_splink/cpr_splink/interface/: block.py  clean.py  clusters.py  db.py  score.py  search.py  visualise.py
hmpps_cpr_splink/cpr_splink/model/: __init__.py  blocking_rules.py  comparisons.py  model.py  score.py  settings.py  training_config.py
hmpps_cpr_splink/cpr_splink/model/model_files/: model_2025_01_13_5e08_no_postcode.json  model_2025_01_13_5e08_no_tf.json  model_2025_01_28_1e09.json  model_2025_03_17_1e09.json  model_2025_09_23_1e09.json  model_2025_09_29_1e09.json  model_2026_02_23_1e09.json
hmpps_cpr_splink/cpr_splink/model_cleaning/: __init__.py  clean.py  create_table_sql.py  tables.py  term_frequencies.py
hmpps_cpr_splink/cpr_splink/schemas/: __init__.py  cleaned.py  joined.py
hmpps_cpr_splink/cpr_splink/utils/: __init__.py  create_table.py
hmpps_cpr_splink/cpr_splink/visualisation/: __init__.py  munge_nodes_edges.py  visualise_cluster_spec.py
hmpps_cpr_splink/cpr_splink/visualisation/specs/: force_directed.json
hmpps_cpr_splink/scripts/: query_rds.py  rds_data_to_s3.py
hmpps_cpr_splink/scripts/postgres_docker/: docker-compose.yaml  dummy_data.sql  dummy_data_raw.sql  dummy_tfs.sql  pg.dockerfile  setup.sh  teardown.sh
hmpps_cpr_splink/scripts/qa/: analyse_blocking_rules.py  blocking_performance.py  profile_cleaned_data.py
hmpps_cpr_splink/scripts/qa_html/: create_dashboard.py  template.j2
hmpps_cpr_splink/tests/: test_all_cleaning.py  test_individual_columns.py  test_interface_clean.py  test_interface_search.py  test_joining_raw.py  test_master_defendant_id_settings.py  test_method_chaining_compound_fns.py  test_method_chaining_single_fns.py  test_model_adjustments.py
hmpps_cpr_splink/tests/data/: incoming_data.py  schema_data_format_full.json  schema_data_format_short.json
hmpps_cpr_splink/tests/data/tables/: schema_address.yaml  schema_candidate_search_return_format.yaml  schema_person.yaml  schema_postcode_lookup.yaml  schema_pseudonym.yaml  schema_reference.yaml  schema_sentence_info.yaml  schema_splink_model_format.yaml
hmpps_cpr_splink/tests/data/test_all_cleaning/: test_all_cleaning.yaml
hmpps_cpr_splink/tests/data/test_individual_columns/: test_dob_arr_end_to_end.yaml  test_names_end_to_end.yaml  test_postcodes_end_to_end.yaml  test_sentence_dates_end_to_end.yaml
hmpps_cpr_splink/tests/data/test_joining_raw/: test_joining_raw_tables.yaml
hmpps_cpr_splink/tests/data/test_method_chaining_compound_fns/: test_individual_names_cleaning.yaml  test_individual_postcode_cleaning.yaml  test_list_transform_name_cleaning.yaml
hmpps_cpr_splink/tests/data/test_method_chaining_single_fns/: test_list_append_from_scalar.yaml  test_list_filter_out_strings_of_length_lt.yaml  test_list_filter_problem_cros.yaml  test_list_transform_remove_all_spaces.yaml
hmpps_cpr_splink/tests/utils/: create_table.py  table_assertions.py
hmpps_person_match/: app.py  conftest.py  lifespan.py
hmpps_person_match/db/: __init__.py  config.py  url.py
hmpps_person_match/db/migrations/: README  (+1 more)
hmpps_person_match/dependencies/: db.py  logging.py
hmpps_person_match/domain/: events.py  roles.py  telemetry_events.py
hmpps_person_match/models/: error_response.py  error_response_model.py  health.py  info.py  person.py  person_match_model.py
hmpps_person_match/routes/: conftest.py  health.py  info.py
hmpps_person_match/utils/: auth.py  environment.py  jwks.py  retry.py
hmpps_person_match/views/: base_view.py  health_view.py  info_view.py  match_view.py  person_match_view.py  person_view.py
integration/: client.py  conftest.py  mock_person.py  person_data.py  person_factory.py  random_test_data.py  test_base.py  test_person.py
integration/data_science/: conftest.py  test_blocking_rules.py  test_candidate_score.py  test_candidate_search.py  test_master_defendant_id.py  test_search_candidates.py  test_term_frequencies.py  test_twins.py
integration/endpoints/: conftest.py  test_is_cluster_valid.py  test_is_cluster_valid_threshold.py  test_monitoring.py  test_person.py  test_person_best_match.py  test_person_creation.py  test_person_deletion.py  test_person_migration.py  test_person_probation_match.py  test_person_score.py  test_person_search.py  test_visualise_cluster.py
(+90 files in other folders)
